--- a/source/styles/adjusment.scss
+++ b/source/styles/adjusment.scss
@@ -8,6 +8,9 @@
     min-height: rem(628px);
     height: 100%;
     position: relative;
+    &_blur{
+        filter:blur(5px);
+    }
    @include desctop{
   
     min-width: rem(1279px);
