--- a/source/styles/adjusment.scss
+++ b/source/styles/adjusment.scss
@@ -87,6 +87,8 @@
     @include phones{
         justify-content: center;
         padding: rem(25px) rem(20px);
+        flex-direction: column;
+        align-items: center;
     }
 }
 
