--- a/source/pages/main/index.scss
+++ b/source/pages/main/index.scss
@@ -373,14 +373,14 @@
 
 .gallery-multi__nav {
     display: flex;
+    position: relative;
+    flex-direction: column;
     flex-wrap: wrap;
-    height: auto;
-    width: auto;
+    height: 100%;
+    left: 0;
+    transition: all ease 1s;
     @include phones {
         flex-direction: row;
-        height: auto;
-        width: auto;
-        transition: margin-left 250ms;
     }
 }
 
@@ -410,7 +410,7 @@
 .gallery-multi__item {
     width: 32%;
     height: 30%;
-    margin-bottom: 15px;
+    margin: 5px;
     @include phones {
         width: auto;
         height: auto;
@@ -436,6 +436,7 @@
 .carousel-multi {
     margin-top: rem(20px);
     height: 333px;
+    width: 100%;
     @include phones {
         width: 100%;
     }
@@ -615,10 +616,11 @@
     display: none;
     align-items: center;
     justify-content: center;
-    width: 1px;
-    height: 1px;
-    transition: all 1s;
+    width: 200px;
+    height: 120px;
+    transition: all ease 1s;
     transform: scale(1, 1);
+    transform-origin: center center;
     display: flex;
     &-container {
         display: flex;
