подправлен бегунок температуры пола

--- a/source/pages/main/index.scss
+++ b/source/pages/main/index.scss
@@ -616,11 +616,10 @@
     display: none;
     align-items: center;
     justify-content: center;
-    width: 200px;
-    height: 120px;
+    width: 1px;
+    height: 1px;
     transition: all ease 1s;
     transform: scale(1, 1);
-    transform-origin: center center;
     display: flex;
     &-container {
         display: flex;
@@ -814,11 +813,13 @@
         }
     }
     &-floor {
-        font-size: rem(66px);
-        color: #333333;
-        width: auto;
-        top: rem(60px);
-        left: rem(50px);
+        left: 35%;
+        top: 50%;
+        text-align: right;
+        font-size: 60px;
+        color:#333333;
+        transform: translate(-35%,-50%);
+        width: 112px;
         @include phones {
             top: 30%;
             left: 22%;
@@ -837,28 +838,14 @@
 #parent {
     width: 200px;
     height: 200px;
-    background: #FEFEFE;
-    box-shadow: 0 2px 4px 0 rgba(134, 121, 71, 0.45);
     border-radius: 50%;
     position: relative;
-}
-
-.slider-lines {
-    background-image: url("../../images/Oval.png");
-    width: 220px;
-    height: 220px;
-    position: absolute;
-    top: -5%;
-    left: 31%;
+    background-image: url("../../images/floorSlider.svg");
+    background-position: top left;
     background-size: contain;
     background-repeat: no-repeat;
-    transform: translate(0%, 0%);
-    @include phones {
-        left: 50%;
-        transform: translate(-50%, -50%);
-        top: 50%;
-    }
 }
+
 
 #child {
     width: 30px;
@@ -875,7 +862,7 @@
         border-bottom: 5px solid transparent;
         content: "";
         position: absolute;
-        top: 15px;
+        top: 36px;
         left: 10px;
         transform: rotate(90deg);
         z-index: -1;
@@ -1096,4 +1083,23 @@ input#light[type="range"] {
     @include phones{
         display: none;
     }
+}
+
+.g-circles {
+    fill: none;
+    stroke-width: 20;
+}
+.sector {
+    stroke-dasharray: 722;
+    stroke-dashoffset: 600;
+    transition: all 1s;
+}
+.clear {
+    stroke-dasharray:1 5;
+    transition: all 1s;
+}
+
+.d{
+ width: 200px;
+ height: 200px;
 }
